Cycles new adaptive sampling causes wrong progress bar for the render process #74504

Closed
opened 2020-03-06 16:56:52 +01:00 by Axel Bechstein · 17 comments

System Information
Operating system: Windows
Graphics card: GeForce GTX 960/PCIe/SSE2

Blender Version
Broken: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: 7d9a5b7b10, type: Release
Worked: this is the first version with adaptive sampling

Short description of error
with the new adaptive sampling enabled the percentage of the rendering progress bar is most of the time to low
even when the rendering has nearly finished the render it shows just 20% for example

**System Information** Operating system: Windows Graphics card: GeForce GTX 960/PCIe/SSE2 **Blender Version** Broken: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: 7d9a5b7b10b4, type: Release Worked: this is the first version with adaptive sampling **Short description of error** with the new adaptive sampling enabled the percentage of the rendering progress bar is most of the time to low even when the rendering has nearly finished the render it shows just 20% for example
Author

Added subscriber: @Unreleased75

Added subscriber: @Unreleased75
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Please add a sample file & steps to redo the bug

Please add a sample file & steps to redo the bug
Author

With this scene the render progress bar goes never to 100%. (At least on my machine.)

With this settings the progress bar goes never over 14%
Adaptive Min Samples: 1
Adaptive Threshold: 0.01

With this settings the progress bar goes never over 51%
Adaptive Min Samples: 0 (default)
Adaptive Threshold: 0.0 (default)

cycles_adaptive.blend

With this scene the render progress bar goes never to 100%. (At least on my machine.) With this settings the progress bar goes never over 14% Adaptive Min Samples: 1 Adaptive Threshold: 0.01 With this settings the progress bar goes never over 51% Adaptive Min Samples: 0 (default) Adaptive Threshold: 0.0 (default) [cycles_adaptive.blend](https://archive.blender.org/developer/F8392383/cycles_adaptive.blend)
Author

I found out this problem exists only on Cycles CPU rendering.
On Cycles GPU rendering with different settings for the adaptive sampling the progress bar is always right.

I found out this problem exists only on Cycles CPU rendering. On Cycles GPU rendering with different settings for the adaptive sampling the progress bar is always right.
Member
https://developer.blender.org/T72339
Member

Closed as duplicate of #72339

Closed as duplicate of #72339

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Duplicate' to: 'Needs Triage'

Changed status from 'Duplicate' to: 'Needs Triage'

Not sure why this was merged, this is not obviously a duplicate.

Not sure why this was merged, this is not obviously a duplicate.
Member

because cpu is being used.. does it matter if it is cycles or eevee ?

because cpu is being used.. does it matter if it is cycles or eevee ?

The render engine matters, there is no interface freezing mentioned in this report, and this is about the new adaptive sampling feature specifically.

The render engine matters, there is no interface freezing mentioned in this report, and this is about the new adaptive sampling feature specifically.

This issue was referenced by blender/cycles@04e077072b

This issue was referenced by blender/cycles@04e077072b1429a356dcadb5a4179d28eb9aad25

This issue was referenced by dcdcc23488

This issue was referenced by dcdcc234884205a8f51eb3a56d0482078105e431

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Brecht Van Lommel self-assigned this 2020-03-06 23:23:29 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74504
No description provided.