Fix T74504: Cycles wrong progress bar with CPU adaptive sampling